# AstralPlayer

astral-components/: package.json
astral-components/src/: App.css  App.tsx
astral-components/src/components/: AlbumCard.tsx  PlaybackControls.css  PlaybackControls.tsx  Player.tsx
astral-components/src/components/auth/: AuthModal.tsx
astral-components/src/components/bar/: Navbar.tsx  Searchbar.css  Searchbar.tsx
astral-components/src/components/buttons/: BackwardButton.tsx  ForwardButton.tsx  PauseButton.tsx  PlayButton.tsx  RepeatButton.tsx  ShuffleButton.tsx
astral-components/src/components/icons/: CircleIcon.tsx  DeleteIcon.tsx  EditIcon.tsx  IconPlayFill.tsx  LoveIcon.tsx  SearchIcon.tsx  SpinnerIcon.tsx  TickIcon.tsx  UpdateIcon.tsx  UploadIcon.tsx  VolumeIcons.tsx
astral-components/src/components/lyrics/: LyricsSidebar.css  LyricsSidebar.tsx
astral-components/src/components/player/: AudioBar.css  AudioBar.tsx  PlaybackControls.tsx  Player.tsx  TimeDisplay.tsx  TrackDisplay.tsx  VolumeBar.css  VolumeBar.tsx
astral-components/src/components/view/: AlbumCoverDisplay.tsx  AlbumTrack.css  AlbumTrack.tsx  AlbumView.css  AlbumView.tsx  MainView.tsx
astral-components/src/components/view/Search/: SearchAlbumDisplay.tsx  SearchArtistDisplay.tsx  SearchTrackDisplay.tsx  SearchView.css  SearchView.tsx
astral-components/src/components/view/Upload/: UploadView.tsx
astral-components/src/pages/: AuthPage.tsx
astral-components/src/util/: BackendController.tsx  MusixmatchHandler.tsx  PlaylistController.tsx
astral_server/: .gitignore  Cargo.toml
astral_server/src/: api.rs  data.rs  err.rs  main.rs  metadata.rs
astral_server/src/api/: docs.rs  extensions.rs  model.rs  paths.rs
astral_server/src/api/paths/: auth.rs  index.rs  lyrics.rs  metadata.rs  stream.rs  track.rs  upload.rs  user.rs
astral_server/src/data/: model.rs
astral_server/src/metadata/: binary.rs  merged.rs  musix.rs
