[package]
name = "astral_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "4.0.0", features = ["uuid"] }
utoipa-redoc = { version = "1.0.0", features = ["axum"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
