[package]
name = "astral_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
audiotags = "0.4.1"
axum = { version = "0.6.20", features = ["headers"] }
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.29"
hex = "0.4.3"
id3 = { version = "1.9.0", features = ["tokio"] }
metaflac = "0.2.5"
mongodb = { version = "2.7.0", features = ["bson-chrono-0_4", "bson-uuid-1"] }
mp4ameta = "0.11.0"
pasetors = "0.6.7"
reqwest = { version = "0.11.22", features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
utoipa = { version = "4.0.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
